Fixing bug 62160, accessing ins or del elements from JS didn't work and caused a crash in the JS GC later on. sr=scc@mozilla.org, r=ben@netscape.com